<resources>
    <string name="app_name">Video Player</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="comment">Comment</string>
    <string name="download">Download</string>
    <string name="send">Send</string>
    <string name="about">   About</string>
    <string name="report">   Report</string>
    <string name="reason">Reason</string>
    <string name="follow">Follow</string>
    <string name="content_type">Content-Type</string>
</resources>